# xhs-workspace

./: .gitignore  .impeccable.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_EN.md  SECURITY.md  THIRD_PARTY_IMPORTS.md  marketplace.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude-plugin/: plugin.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: config.yml  desktop-bug.yml  feature-request.yml
.github/workflows/: desktop-bundle.yml  desktop-validate.yml  extension-package.yml  extension-validate.yml
apps/desktop/: README.md  README_EN.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: check-release-version.mjs  create-bundle-manifest.mjs
apps/desktop/shared/: localAsset.ts
apps/desktop/src/: App.tsx  index.css  main.tsx  types.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/ipc/: bootstrap.ts
apps/desktop/src/utils/: redclawAuthoring.ts
apps/extension/: README.md  README_EN.md  background.js  bridge.js  manifest.json  onboarding.html  onboarding.js  package.sh
apps/extension/lib/: storage.js
apps/extension/popup/: popup.css  popup.html  popup.js  settings.css  settings.html  settings.js
docs/: desktop-launch-checklist.en.md  desktop-launch-checklist.md  desktop-release-flow.en.md  desktop-release-flow.md  tauri-mvp-prd.md
