[package]
name = "xhs_studio"
version = "0.1.2"
description = "XHS Atelier 桌面应用的 Rust 宿主程序"
authors = ["茉灵智库"]
edition = "2021"
license = "MIT"
repository = "https://github.com/88lin/xhs-workspace"
homepage = "https://github.com/88lin/xhs-workspace"

[build-dependencies]
tauri-build = { version = "2.5.4" }

[dependencies]
arboard = "3.4.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
dirs = "5.0.1"
open = "5.3.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.1", features = [] }

[features]
default = []
